@@ -119,7 +119,7 @@ sub indel_color {
 sub insertion_color {
     my $self = shift;
     my $c    = $self->option('insertion_color');
-    $c     ||= $self->indel_color;
+    $c     ||= $self->option('indel_color');
     $c     ||= $self->my_options->{insertion_color}[1];
     return $self->translate_color($c);
 }
@@ -127,7 +127,7 @@ sub insertion_color {
 sub deletion_color {
     my $self = shift;
     my $c    = $self->option('deletion_color');
-    $c     ||= $self->indel_color;
+    $c     ||= $self->option('indel_color');
     $c     ||= $self->my_options->{deletion_color}[1];
     return $self->translate_color($c);
 }
@@ -365,11 +365,12 @@ sub draw_component {
     my ($gd,$left,$top,$partno,$total_parts) = @_;
     my ($x1,$y1,$x2,$y2) = $self->bounds($left,$top);
 
-    my ($strand,$draw_target);
+    my $draw_target;
+    my $strand   = $self->feature->strand;
+
     if ($self->draw_target && $self->dna_fits) {
 	$draw_target++;
 	my $stranded = $self->stranded;
-	$strand   = $self->feature->strand;
 	my $bgcolor  = $self->bgcolor;
 	if ($stranded) {
 	    $x1 -= 6 if $strand < 0 && $x1 >= $self->panel->left;
@@ -385,7 +386,8 @@ sub draw_component {
     return unless $self->show_mismatch;
     my $mismatch_color = $self->mismatch_color;
     my $feature = $self->feature;
-    my $start = $self->feature->start;
+    my $start   = $self->feature->start;
+    my $end     = $feature->end;
     my (@mismatch_positions,@del_positions,@in_positions);
 
     if (my ($src,$matchstr,$tgt) = eval{$feature->padded_alignment}) {
@@ -427,7 +429,9 @@ sub draw_component {
 	my @tgt = split '',$tdna;
 	for (my $i=0;$i<@src;$i++) {
 	    next if $src[$i] eq $tgt[$i];
-	    push @mismatch_positions,$i+$start;
+	    warn "$src[$i] eq $tgt[$i], strand=$strand";
+	    my $pos = $strand >= 0 ? $i+$start : $end-$i;
+	    push @mismatch_positions,$pos;
 	}
     }
 
@@ -453,14 +457,14 @@ sub draw_component {
 	    my $top   = $y1+1;
 	    my $bottom= $y2-1;
 	    my $middle= ($y1+$y2)/2;
-	    if ($self->stranded && $left<=$x1 && $self->strand < 0) {
+	    if ($self->stranded && $left <= $x1+$pixels_per_base-1 && $self->strand < 0) {
 		$self->filled_arrow($gd,$self->strand,
 				    $draw_target ? ($left-4):$left+2,
 				    $top,
 				    $draw_target ? $right:$right+5,$bottom,$color,$color,1);
 	    } elsif ($self->stranded && $right >= $x2-$pixels_per_base+1 && $self->strand > 0) {
 		$self->filled_arrow($gd,$self->strand,
-				    $left,$top,$draw_target ? ($right+4): $right-2,$bottom,$mismatch_color,$mismatch_color,1);
+				    $left,$top,$draw_target ? ($right+4): $right-2,$bottom,$color,$color,1);
 	    } else {
 		$self->filled_box($gd,
 				  $left,
@@ -538,7 +542,7 @@ sub draw_multiple_alignment {
 
     my $target = $s->hit;
     my ($src_start,$src_end) = ($s->start,$s->end);
-    next unless $src_start <= $panel_end && $src_end >= $panel_start;
+#    next unless $src_start <= $panel_end && $src_end >= $panel_start;
 
     my ($tgt_start,$tgt_end) = ($target->start,$target->end);
 
@@ -684,7 +688,9 @@ sub draw_multiple_alignment {
   }
 
   # remove segments that got clipped out of existence
-  @segments = grep { $_->[SRC_START]<=$_->[SRC_END] } @segments;
+  # no longer doing this because it interferes with ability to
+  # detect insertions in the target
+#  @segments = grep { $_->[SRC_START]<=$_->[SRC_END] } @segments;
 
   # relativize coordinates
   if ($strand < 0) {
@@ -755,7 +761,10 @@ sub draw_multiple_alignment {
       };
 
   my $mismatch_only = $self->mismatch_only;
-  my ($tgt_last_end,$src_last_end,$leftmost,$rightmost);
+  my ($tgt_last_end,$src_last_end,$leftmost,$rightmost,$gaps);
+
+  my $segment = 0;
+
   for my $seg (sort {$a->[SRC_START]<=>$b->[SRC_START]} @segments) {
     my $y = $top-1;
     my $end = $seg->[SRC_END]-$seg->[SRC_START];
@@ -779,70 +788,52 @@ sub draw_multiple_alignment {
       $drew_sequence++;
     }
 
+    # deal with gaps in the alignment
+    if (defined $src_last_end && (my $delta = $seg->[SRC_START] - $src_last_end) > 1) {
+	for (my $i=0;$i<$delta-1;$i++) {
+	    my $x = $base2pixel->($src_last_end,$i+1);
+	    next if $x > $panel_right;
+	    next if $x < $panel_left;
+	    $gd->char($font,$x,$y,'-',$deletion_font_color);
+	}
+	$gaps = $delta-1;
+    }
+
     # indicate the presence of insertions in the target
-    if (defined $tgt_last_end) {
-      my $delta     = $seg->[TGT_START] - $tgt_last_end;
-      my $src_delta = $seg->[SRC_START] - $src_last_end;
-      if ($delta > 1 and $src_delta > 0) {  # an insertion in the target relative to the source
-	my $gap_left  = $fontwidth + $base2pixel->($src_last_end,0);
+    $gaps       ||= 0;
+    my $pos       = $src_last_end + $gaps;
+    my $delta     = $seg->[TGT_START] - $tgt_last_end;
+    my $src_delta = $seg->[SRC_START] - $src_last_end;
+
+    if ($delta > $src_delta-$gaps) {  # an insertion in the target relative to the source
+	my $gap_left  = $base2pixel->($pos+0.5,0);
 	my $gap_right = $base2pixel->($seg->[SRC_START],0);
 	($gap_left,$gap_right) = ($gap_right+$fontwidth,$gap_left-$fontwidth) if $self->flip;
 	warn "delta=$delta, gap_left=$gap_left, gap_right=$gap_right" if DEBUG;
 
-	if ($delta == $src_delta) {
-	  $gap_left  += $pixels_per_base/2-2;
-	  $gap_right -= $pixels_per_base/2-2;
-	}
-
 	next if $gap_left <= $panel_left || $gap_right >= $panel_right;
+	    
+	my $length = $delta-1;
+	my $gap_distance   = $gap_right - $gap_left;
+	my $pixels_per_inserted_base = $gap_distance/$length;
 
-
-	my $gap_distance             = $gap_right - $gap_left + 1;
-	my $pixels_per_inserted_base = $gap_distance/($delta-1);
-
- 	if ($pixels_per_inserted_base >= $fontwidth) {  # Squeeze the insertion in
- 	  for (my $i = 0; $i<$delta-1; $i++) {
- 	    my $x = $gap_left + ($pixels_per_inserted_base-$fontwidth)/2 + $pixels_per_inserted_base * $i;
- 	    my $bp = $self->_subsequence($tgt_dna,$tgt_last_end+$i+1,$tgt_last_end+$i+1);
-	    next if $x < $panel_left;
- 	    $gd->char($font,$x,$y,$bp,$color);
- 	  }
+	if ($pixels_per_inserted_base >= $fontwidth) {  # Squeeze the insertion in
+	    for (my $i = 0; $i<$delta-1; $i++) {
+		my $x = $gap_left + $pixels_per_inserted_base * $i;
+		my $bp = $self->_subsequence($tgt_dna,$tgt_last_end+$i+1,$tgt_last_end+$i+1);
+		next if $x < $panel_left;
+		$gd->char($font,$x,$y,$bp,$color);
+	    }
 	} else {  #here's where we insert the insertion length
-	    my $length = $delta-1;
 	    if ($gap_distance >= $fontwidth*length($length)) {
-		my $center = $gap_left + $gap_distance/2 - ($fontwidth*length($length))/2;
-		$gd->string($font,$center,$y,$length,$color);
+		$gd->string($font,$gap_left,$y,$length,$color);
 	    }
 	}
-      }
-      # deal with gaps in the alignment
-      elsif ( (my $delta = $seg->[SRC_START] - $src_last_end) > 1) {
-	for (my $i=0;$i<$delta-1;$i++) {
-	  my $x = $base2pixel->($src_last_end,$i+1);
-	  next if $x > $panel_right;
-	  $gd->char($font,$x,$y,'-',$deletion_font_color);
-	}
-	
-      }
-
     }
 
+  } continue {
     $tgt_last_end  = $seg->[TGT_END];
     $src_last_end  = $seg->[SRC_END];
-  }
-
-  # additional fixup -- insert dashes at beginnings and ends of the segments, if they don't span the full
-  # alignment for some reason - THIS SHOULD NOT BE NECESSARY AND INDICATES THAT THIS WHOLE METHOD NEEDS
-  # TO BE REWRITTEN!
-  if (defined $leftmost && $leftmost-$bl > $pixels_per_base) {
-      for (map {$bl+$_*$pixels_per_base} 0..($leftmost-$bl)/$pixels_per_base-1) {
-	  $gd->char($font,$_+2,$top-1,'-',$color);
-      }
-  }
-  if (defined $rightmost && $br-$rightmost > $pixels_per_base) {
-      for (map {$rightmost+$_*$pixels_per_base} (1..($br-$rightmost)/$pixels_per_base)) {
-	  $gd->char($font,$_+2,$top-1,'-',$color);
-      }
   }
 
   return $drew_sequence;
@@ -1080,6 +1071,11 @@ In addition, the following glyph-specific options are recognized:
   -show_mismatch When combined with -draw_target,     0 (false)
                  highlights mismatched bases in
                  the mismatch color.  
+                 Can be 0 (don't display);
+                 1 (display when the DNA fits);
+                 or another positive integer
+                 (display when the region in
+                 view is <= this value).
                  See "Displaying Alignments".
 
   -mismatch_only When combined with -draw_target,     0 (false)
@@ -1090,7 +1086,15 @@ In addition, the following glyph-specific options are recognized:
 
   -mismatch_color The mismatch color to use           'lightgrey'
 
-  -indel_color   The color to use for small indels.   'lightgrey'
+  -insertion_color The color to use for insertions    'green'
+                   relative to the reference.          
+
+  -deletion_color The color to use for deletions      'red'
+                  relative to the reference.
+
+  -indel_color   The color to use for indels, used   'lightgrey'
+                 only if -insertion_color or
+                 -deletion_color are absent
 
   -true_target   Show the target DNA in its native    0 (false)
                  (plus strand) orientation, even if
@@ -1115,7 +1119,10 @@ cause the alignment to be extended at the extreme ends by the
 indicated number of bases, and is useful for looking for polyAs and
 cloning sites at the ends of ESTs and cDNAs. -show_mismatch will cause
 mismatched bases to be highlighted in with the color indicated by
--mismatch_color (default lightgray).
+-mismatch_color. A -show_mismatch value of "1" will highlight mismatches
+only when the base pairs are displayed. A positive integer will cause
+mismatches to be shown whenever the region in view is less than or equal
+to the requested value.
 
 At high magnifications, minus strand matches will automatically be
 shown as their reverse complement (so that the match has the same
